<resources>
    <string name="placeholder">Placeholder</string>
    <string name="tab_2">Tab 2</string>
    <string name="empty">....</string>
    <string name="back">back</string>
    <string name="refresh">Muat Ulang</string>
    <string name="connection">Connection</string>
    <string name="connection_text">Tidak ada koneksi internet</string>
    <string name="komplain_text">Komplain</string>
    <string name="komplain_text_2">Ajukan Komplain</string>
    <string name="heck">:</string>
    <string name="hint"></string>
    <string name="akun">Status Akun</string>
    <string name="tentang_app">Tentang Aplikasi</string>
    <string name="tim_app">Tim Aplikasi</string>
    <string name="nama_tim">Nama</string>
    <string name="nama_tim_1">Deni Tri Muslimin</string>
    <string name="title_tim_1">Database</string>
    <string name="title_tim_1_1">Backend Programmer</string>
    <string name="nama_tim_2">Dicky Herlambang</string>
    <string name="title_tim_2">System Analyst</string>
    <string name="title_tim_2_1">Frontend Programmer</string>
    <string name="nama_tim_3">Adam Nursyahbani</string>
    <string name="title_tim_3">Designer</string>
    <string name="title_tim">Jabatan</string>
    <string name="nim_title">NIM</string>
    <string name="nim_1">41816010079</string>
    <string name="nim_2">41816010078</string>
    <string name="nim_3">41815010011</string>
    <string name="app_name_desc">Mandorin</string>
    <string name="desc">Aplikasi berbasis mobile dan website yang diharapkan dapat membantu masyarakat dalam memenuhi kebutuhan pelayanan jasa konstruksi</string>
    <string name="welcome_title_1">Selamat Datang di Aplikasi !</string>
    <string name="welcome_title_2">Info Aplikasi</string>
    <string name="welcome_title_3">Fitur Aplikasi</string>
    <string name="welcome_title_3_1">Profil Mandor</string>
    <string name="welcome_title_3_2">Layanan Jasa</string>
    <string name="welcome_title_3_3">Kontrak</string>
    <string name="welcome_title_3_4">Pembayaran</string>
    <string name="welcome_title_3_5">Komplain</string>
    <string name="welcome_title_3_6">Riwayat</string>
    <string name="welcome_title_4">Deskripsi Fitur</string>
    <string name="welcome_title_4_1">Anda dapat melihat informasi mengenai mandor yang anda pilih</string>
    <string name="welcome_title_4_2">Anda dapat melakukan pemesanan layanan jasa konstruksi sesuai keperluan</string>
    <string name="welcome_title_4_3">Anda dapat melihat informasi dan status kontrak berjalan</string>
    <string name="welcome_title_4_4">Anda dapat melihat informasi, status dan melakukan pembayaran kontrak</string>
    <string name="welcome_title_4_5">Anda dapat mengajukan dan melihat komplain yang di ajukan pada kontrak tertentu</string>
    <string name="welcome_title_4_6">Anda dapat melihat riwayat berupa kontrak, pembayaran dan komplain yang telah selesai</string>
    <string name="welcome_title_6">Panduan Selesai</string>
    <string name="welcome_title_7">Anda telah siap menggunakan aplikasi kami</string>
    <string name="app_name">Mandorin</string>
    <string name="menu_title_1">Menu</string>
    <string name="menu_title_2">Tentang Kami</string>
    <string name="app_fragment_home_menu_1">Mandor</string>
    <string name="app_menu_1_data_mandor">Data Mandor</string>
    <string name="app_menu_1_string_data_mandor_1">NIK</string>
    <string name="app_menu_1_string_data_mandor_2">Nama</string>
    <string name="app_menu_1_string_data_mandor_3">Umur</string>
    <string name="app_menu_1_string_data_mandor_4">Alamat</string>
    <string name="app_mandor_1_profile_1">Foto Mandor</string>
    <string name="app_mandor_1_profile_2">Profil Mandor</string>
    <string name="app_mandor_1_profile_3">Data Mandor</string>
    <string name="app_mandor_1_profile_3_data_1">Nama</string>
    <string name="app_mandor_1_profile_3_data_2">NIK</string>
    <string name="app_mandor_1_profile_3_data_3">Umur</string>
    <string name="app_mandor_1_profile_3_data_8">Agama</string>
    <string name="app_mandor_1_profile_3_data_6">Tempat</string>
    <string name="app_mandor_1_profile_3_data_7">Tanggal Lahir</string>
    <string name="app_mandor_1_profile_3_data_9">Tempat / Tanggal Lahir</string>
    <string name="app_mandor_1_profile_3_data_4">Alamat</string>
    <string name="app_mandor_1_profile_3_data_5">Lama Kerja</string>
    <string name="app_mandor_sewa_jasa_title">Menu Layanan Jasa</string>
    <string name="app_mandor_layanan_jasa_title">Layanan Jasa</string>
    <string name="app_mandor_layanan_jasa_1">Data Pemesan</string>
    <string name="app_mandor_layanan_jasa_2">Nama</string>
    <string name="app_mandor_layanan_jasa_3">NIK</string>
    <string name="app_mandor_layanan_jasa_4">E - Mail</string>
    <string name="app_mandor_layanan_jasa_5">No. HP</string>
    <string name="app_mandor_layanan_jasa_6">Alamat Survey</string>
    <string name="app_mandor_layanan_jasa_7">Tanggal Survey</string>
    <string name="app_mandor_layanan_jasa_8">Pilih Borongan</string>
    <string name="app_mandor_layanan_jasa_9">Desain Rumah</string>
    <string name="app_mandor_layanan_jasa_10">Kirim</string>
    <string name="app_mandor_layanan_jasa_11">Data Pekerjaan</string>
    <string name="app_mandor_layanan_jasa_12">Data Layanan</string>
    <string name="app_mandor_layanan_jasa_13">Pilih Tanggal</string>
    <string name="app_mandor_layanan_jasa_radio_1">Tenaga</string>
    <string name="app_mandor_layanan_jasa_radio_2">Bahan + Tenaga</string>
    <string name="app_mandor_layanan_jasa_radio_3">Ada</string>
    <string name="app_mandor_layanan_jasa_radio_4">Belum Ada</string>
    <string name="app_mandor_recycler_data_pemesan_title">Data Pemesan</string>
    <string name="app_mandor_recycler_data_pemesan_1">NIK Pemesan</string>
    <string name="app_mandor_recycler_data_pemesan_2">Nama Pemesan</string>
    <string name="app_mandor_recycler_data_pemesan_3">Tanggal Survey</string>
    <string name="app_mandor_recycler_data_pemesan_4">Status Layanan</string>
    <string name="app_mandor_recycler_data_pemesan_5">Alamat</string>
    <string name="app_mandor_sewa_jasa_1">Renovasi</string>
    <string name="app_mandor_sewa_jasa_2">Bangunan Baru</string>
    <string name="app_mandor_bangun_awal_title">Bangunan Baru</string>
    <string name="app_mandor_bangun_awal_radio_1">Tenaga</string>
    <string name="app_mandor_bangun_awal_radio_2">Bahan + Tenaga</string>
    <string name="app_mandor_bangun_awal_1">Pilih Borongan</string>
    <string name="app_mandor_bangun_awal_2">Masukkan Luas Tanah</string>
    <string name="app_mandor_bangun_awal_3">m²</string>
    <string name="app_mandor_bangun_awal_4">Luas Tanah</string>
    <string name="app_mandor_bangun_awal_5">Upload Desain Rumah</string>
    <string name="app_mandor_bangun_awal_6">Upload</string>
    <string name="app_mandor_bangun_awal_7">Nama Berkas</string>
    <string name="app_mandor_bangun_awal_8">Selanjutnya</string>
    <string name="app_mandor_bangun_awal_next_1">Data Pemesan</string>
    <string name="app_mandor_bangun_awal_next_2">Nama</string>
    <string name="app_mandor_bangun_awal_next_3">NIK</string>
    <string name="app_mandor_bangun_awal_next_4">E - Mail</string>
    <string name="app_mandor_bangun_awal_next_5">No. HP</string>
    <string name="app_mandor_bangun_awal_next_6">Alamat</string>
    <string name="app_mandor_bangun_awal_next_7">Tanggal Survey</string>
    <string name="app_mandor_bangun_awal_next_8">Kirim</string>
    <string name="app_mandor_renovasi_title">Renovasi</string>
    <string name="app_mandor_renovasi_1">Data Renovasi</string>
    <string name="app_mandor_renovasi_2">Masukkan Data Yang Ingin Di Renovasi</string>
    <string name="app_mandor_tanggapan">Tanggapan</string>
    <string name="app_mandor_tanggapan_1">Nama Lengkap</string>
    <string name="app_mandor_tanggapan_2">Lokasi Pekerjaan</string>
    <string name="app_mandor_tanggapan_3">Tipe Pekerjaan</string>
    <string name="app_mandor_tanggapan_4">Tanggapan</string>
    <string name="app_mandor_tanggapan_5">Renovasi</string>
    <string name="app_mandor_tanggapan_6">Bangunan Baru</string>
    <string name="app_mandor_tanggapan_7">Masukkan Tanggapan Anda Mengenai Kinerja Mandor Kami</string>
    <string name="app_mandor_konfirmasi_title">Konfirmasi</string>
    <string name="app_mandor_konfirmasi_1">Terkirim !</string>
    <string name="app_mandor_konfirmasi_2">Terima kasih telah menggunakan jasa kami</string>
    <string name="app_mandor_konfirmasi_3">Kami akan mengirimkan surveyor untuk</string>
    <string name="app_mandor_konfirmasi_4">melihat lokasi pengerjaan.</string>
    <string name="app_mandor_konfirmasi_5">Untuk pemberitahuan selanjutnya akan</string>
    <string name="app_mandor_konfirmasi_6">kami informasikan melalu Email atau HP.</string>
    <string name="app_mandor_konfirmasi_7">Pastikan Email dan HP anda aktif</string>
    <string name="app_mandor_konfirmasi_8">Selesai</string>
    <string name="app_mandor_login_title">Log in</string>
    <string name="app_mandor_login_1">Masukkan Email</string>
    <string name="app_mandor_login_2">Masukkan Password</string>
    <string name="app_mandor_login_3">Buat Akun</string>
    <string name="app_mandor_login_4">Selanjutnya</string>
    <string name="app_mandor_login_5">Lupa Password?</string>
    <string name="app_mandor_login_6">Tampilkan Password</string>
    <string name="app_mandor_register_title">Buat Akun</string>
    <string name="app_mandor_register_1">Masukkan Email</string>
    <string name="app_mandor_register_2">Masukkan Password</string>
    <string name="app_mandor_user_profile_title">Data Akun</string>
    <string name="app_mandor_user_misc">:</string>
    <string name="app_mandor_menu_edit_akun_1">Umur</string>
    <string name="app_mandor_menu_edit_akun_6">Masukkan Nama</string>
    <string name="app_mandor_menu_edit_akun_7">Masukkan Umur</string>
    <string name="app_mandor_menu_edit_akun_8">Masukkan NIK</string>
    <string name="app_mandor_menu_edit_akun_9">Masukkan No. HP</string>
    <string name="app_mandor_menu_edit_akun_10">Masukkan Alamat</string>
    <string name="app_mandor_menu_edit_akun_11">Batalkan</string>
    <string name="app_mandor_menu_edit_akun_12">Simpan</string>
    <string name="app_mandor_user_menu_1">Umur</string>
    <string name="app_mandor_user_menu_2">NIK</string>
    <string name="app_mandor_user_menu_3">No. Telp</string>
    <string name="app_mandor_user_menu_4">Alamat</string>
    <string name="app_mandor_user_menu_5">Profil User</string>
    <string name="app_mandor_konfirmasi_komplain_1">Terkirim !</string>
    <string name="app_mandor_konfirmasi_komplain_2">Terima kasih telah menggunakan jasa kami</string>
    <string name="app_mandor_konfirmasi_komplain_3">Kami akan memproses komplain anda</string>
    <string name="app_mandor_konfirmasi_komplain_4">setelah data anda terkonfirmasi.</string>
    <string name="app_mandor_konfirmasi_komplain_5">Untuk pemberitahuan selanjutnya akan</string>
    <string name="app_mandor_konfirmasi_komplain_6">kami informasikan melalu Email atau HP.</string>
    <string name="app_mandor_konfirmasi_komplain_7">Pastikan Email dan HP anda aktif</string>
    <string name="app_mandor_konfirmasi_komplain_8">Selesai</string>
    <string name="app_mandor_konfirmasi_pembayaran_1">Terkirim !</string>
    <string name="app_mandor_konfirmasi_pembayaran_2">Terima kasih telah menggunakan jasa kami</string>
    <string name="app_mandor_konfirmasi_pembayaran_3">Pembayaran akan di proses</string>
    <string name="app_mandor_konfirmasi_pembayaran_4">dalam waktu 1x24 Jam</string>
    <string name="app_mandor_konfirmasi_pembayaran_5">Untuk pemberitahuan selanjutnya</string>
    <string name="app_mandor_konfirmasi_pembayaran_6">kami informasikan melalu Email atau HP.</string>
    <string name="app_mandor_konfirmasi_pembayaran_7">Pastikan Email dan HP anda aktif</string>
    <string name="app_mandor_konfirmasi_pembayaran_8">Selesai</string>
</resources>