<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#b0bec5">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/app_name"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/app_mandor_konfirmasi_title"
            android:fontFamily="@font/test"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="55dp"/>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_konfirmasi_pembayaran"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="12dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/app_mandor_konfirmasi_pembayaran_1"
            android:textColor="#000"
            android:fontFamily="@font/test"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="240dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/send" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="@string/app_mandor_konfirmasi_pembayaran_2"
            android:textSize="18sp"
            android:fontFamily="@font/test"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="360dp"
            android:fontFamily="@font/test"
            android:text="@string/app_mandor_konfirmasi_pembayaran_3"
            android:textSize="20sp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="390dp"
            android:fontFamily="@font/test"
            android:text="@string/app_mandor_konfirmasi_pembayaran_4"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="420dp"
            android:text="@string/app_mandor_konfirmasi_pembayaran_5"
            android:textSize="20sp"
            android:fontFamily="@font/test"
            android:textColor="#000"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp"
            android:text="@string/app_mandor_konfirmasi_pembayaran_6"
            android:textSize="20sp"
            android:fontFamily="@font/test"
            android:textColor="#000"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="520dp"
            android:text="@string/app_mandor_konfirmasi_pembayaran_7"
            android:textSize="20sp"
            android:fontFamily="@font/test"
            android:textColor="#000"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/button_selesai_pembayaran"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="590dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="end"
            android:background="@color/colorPrimary"
            android:text="@string/app_mandor_konfirmasi_pembayaran_8"
            android:fontFamily="@font/test"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textAllCaps="false" />

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>