<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#bdbdbd">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.v7.widget.CardView
            android:id="@+id/back_activity_edit_akun"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorPrimary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:gravity="start"
                android:contentDescription="@string/back" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/toolbar_text"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_mandor_user_profile_title"
            android:textColor="#ffffff"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="10dp"/>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_edit_akun"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#fff"
        android:layout_marginTop="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/img_head_akun"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_mandor_menu_edit_akun_1"
            android:src="@drawable/profil" />

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/app_mandor_user_menu_5"
            android:textColor="#fff"
            android:layout_gravity="end"
            android:textAlignment="center"
            android:background="@color/colorPrimary"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/userEditFullName"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:layout_marginTop="45dp"
            android:textSize="20sp"
            android:hint="@string/app_mandor_menu_edit_akun_6"
            android:textColor="#000"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:id="@+id/userEditEmail"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:layout_marginTop="100dp"
            android:textSize="20sp"
            android:text="@string/empty"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_mandor_user_menu_1"
            android:layout_gravity="start"
            android:layout_marginTop="190dp"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/userEditAge"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:layout_marginTop="179dp"
            android:textSize="20sp"
            android:hint="@string/app_mandor_menu_edit_akun_7"
            android:textColor="#000"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_mandor_user_misc"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="70dp"
            android:textSize="20sp"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/user_edit_id"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:layout_marginTop="229dp"
            android:textSize="20sp"
            android:hint="@string/app_mandor_menu_edit_akun_8"
            android:textColor="#000"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_mandor_user_menu_2"
            android:layout_gravity="start"
            android:layout_marginTop="240dp"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_mandor_user_misc"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="70dp"
            android:textSize="20sp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_mandor_user_menu_3"
            android:layout_gravity="start"
            android:layout_marginTop="290dp"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_mandor_user_misc"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="290dp"
            android:layout_marginEnd="70dp"
            android:textSize="20sp"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/user_edit_telp"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:layout_marginTop="279dp"
            android:textSize="20sp"
            android:hint="@string/app_mandor_menu_edit_akun_9"
            android:textColor="#000"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_mandor_user_menu_4"
            android:layout_gravity="start"
            android:layout_marginTop="340dp"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_mandor_user_misc"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="340dp"
            android:layout_marginEnd="70dp"
            android:textSize="20sp"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/user_edit_address"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:layout_marginTop="329dp"
            android:textSize="20sp"
            android:hint="@string/app_mandor_menu_edit_akun_10"
            android:textColor="#000"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:gravity="top|start"
            android:scrollbars="vertical"
            android:scrollHorizontally="false" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15sp"
            android:layout_gravity="bottom"
            android:textSize="22sp"
            android:textColor="#000"
            android:text="@string/app_mandor_menu_edit_akun_11" />

        <Button
            android:id="@+id/save_account"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10sp"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:text="@string/app_mandor_menu_edit_akun_12"
            android:layout_gravity="bottom|end" />

        <!-- Dummy Debugging Begin !-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/dummy_userpic_edit" />
        <!-- Dummy Debugging End !-->

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>